@@ -1,3 +1,7 @@
+comListe 0.4.2 - 11-11-2017 - Pierre Van Glabeke
+* màj tpl
+* localisation
+
 comListe 0.4.1 - 23-07-2015 - Pierre Van Glabeke
 * correction localisation
 
